# async-signalr-client

./: .flake8  .gitignore  LICENSE  Makefile  README.md  project.py  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
async_signalr_client/: __init__.py  connection.py  exceptions.py
async_signalr_client/models/futures/: __init__.py
async_signalr_client/models/messages/: __init__.py  cancel_invocation.py  close.py  completion.py  handshakes.py  invocation.py  ping.py  stream_invocation.py  stream_item.py
async_signalr_client/protocols/: base.py  json_protocol.py
async_signalr_client/transports/: base_transport.py  long_polling_transport.py  websocket_transport.py
client/: __init__.py  connection.py  exceptions.py
client/models/: __init__.py
client/models/futures/: __init__.py  completions.py
client/models/messages/: base.py  completion.py  handshakes.py  invocation.py  ping.py  stream_item.py  types.py
client/protocols/: __init__.py  base.py  json_protocol.py  message_pack_protocol.py
client/transports/: __init__.py  base_transport.py  long_polling_transport.py  websocket_transport.py
demo-server/: ChatHub.cs  SignalRSimpleChat.csproj  Startup.cs
examples/: basic.py  subclass.py
test-reports/: junit.xml  result.html
tests/: conftest.py  test_client.py  test_protocols.py
tests/functional/: test_client.py
tests/functional/helper/: launch_server.py
tests/helper/: launch_server.py
tests/unit/: test_protocols.py  test_transports.py
