[metadata]
license_file = LICENSE

[flake8]
ignore = E305
exclude = .git,
          .gitignore,
           __pycache__,
           LICENSE,
           README.md,
           requirements.txt,
          .coverage,
           tox.ini,
           .tox,
           demo-server,
           venv,
           .circleci
max-line-length = 120

[tool:pytest]
testpaths = tests
filterwarnings = error

[coverage:run]
source = client